[project]
name = "notebooks"
version = "0.1.0"
description = "Gallery of atoti notebooks"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "boto3 >=1.35.36, <2",
    "s3fs >=2024.6.1, <2026",
    "fsspec >=2024.6.1, <2026",
    "wget >=3.2, <4",
    "treelib >=1.6.4, <2",
    "matplotlib >=3.9.2, <4",
    "praw >=7.7.0, <8",
    "seaborn >=0.13.2, <1",
    "statsmodels >=0.14.4, <1",
    "imblearn >=0.0, <1",
    "ipywidgets >=8.1.5, <9",
    "openpyxl >=3.1.5, <4",
    "haversine >=2.8.0, <3",
    "watchdog >=5.0.3, <7",
    "quantlib >=1.36, <2",
    "kafka-python >=2.0.2, <3",
    "xgboost >=2.1.1, <3",
    "natsort >=8.3.1, <9",
    "tabulate >=0.9.0, <1",
    "orjson >=3.10.7, <4",
    "lxml >=5.3.0, <6",
    "html5lib >=1.1, <2",
    "yfinance >=0.2.44, <1",
    "pyopls >=20.3.post1, <21",
    "nltk >=3.9.1, <4",
    "textblob >=0.18.0, <1",
    "llvmlite >=0.43.0, <1",
    "protobuf >=5.28.2, <6",
    "tsfresh >=0.20.3, <1",
    "scikit-learn >=1.5.2, <2",
    "folium >=0.17.0, <1",
    "atoti[aws,azure,gcp,jupyterlab,kafka,jdbc]==0.9.3",
    "pandas == 2.2.3",
    "jupyterlab == 4.3.2",
    "ruff >=0.6.9, <1",
    "memory-profiler>=0.61.0",
    "jupyter-resource-usage>=1.1.0",
]

[tool.source]
name = "PyPI"
priority = "primary"

[tool.ruff]
extend-include = ["*.ipynb"]
