[tool.poetry]
name = "02-technical-tutorials"
version = "0.8.2"
description = "Technical tutorials for Atoti"
authors = ["Yeo Hui Fang <hfy@activeviam.com>"]
readme = "README.md"
packages = [{ exclude = "*" }]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<3.11"
atoti = {extras = ["aws", "azure", "gcp", "jupyterlab3", "kafka", "sql"], version = "^0.8.2", source = "PyPI"}
ipywidgets = {version = "^8.0.7", source = "PyPI"}
wget = {version = "^3.2", source = "PyPI"}
watchdog = {version = "^3.0.0", source = "PyPI"}
treelib = {version = "^1.6.4", source = "PyPI"}
matplotlib = {version = "^3.7.2", source = "PyPI"}

[tool.poetry.dev-dependencies]
black-nb = "^0.7"
black = { extras = ["jupyter"], version = "*" }

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

