[tool.poetry]
name = "finance"
version = "0.8.2"
description = "Atoti Financial Use Cases"
authors = ["Yeo Hui Fang <hfy@activeviam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<3.11"
atoti = {extras = ["aws", "azure", "gcp", "jupyterlab3", "kafka", "sql"], version = "^0.8.2", source = "PyPI"}
xgboost = {version = "^1.7.6", source = "PyPI"}
scikit-learn = {version = "^1.3.0", source = "PyPI"}
statsmodels = {version = "^0.14.0", source = "PyPI"}
ipywidgets = {version = "^8.0.7", source = "PyPI"}
pyportfolioopt = {version = "^1.5.5", source = "PyPI"}
yfinance = {version = "^0.2.25", source = "PyPI"}
wget = {version = "^3.2", source = "PyPI"}
boto3 = {version = "^1.28.8", source = "PyPI"}
tqdm = {version = "^4.65.0", source = "PyPI"}
natsort = {version = "^8.4.0", source = "PyPI"}
pyopls = {version = "^20.3.post1", source = "PyPI"}
llvmlite = {version = "^0.40.0", source = "PyPI"}
tsfresh = {version = "^0.20.0", source = "PyPI"}
tabulate = {version = "^0.9.0", source = "PyPI"}
matplotlib = {version = "^3.7.2", source = "PyPI"}

[tool.poetry.dev-dependencies]
black-nb = "^0.7"
black = { extras = ["jupyter"], version = "*" }

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

