[tool.poetry]
name = "other-industries"
version = "0.8.2"
description = "Atoti use cases for other industries"
authors = ["Yeo Hui Fang <hfy@activeviam.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<3.11"
atoti = {extras = ["aws", "azure", "gcp", "jupyterlab3", "kafka", "sql"], version = "^0.8.2", source = "PyPI"}
scikit-learn = {version = "^1.3.0", source = "PyPI"}
wget = {version = "^3.2", source = "PyPI"}
watchdog = {version = "^3.0.0", source = "PyPI"}
tqdm = {version = "^4.65.0", source = "PyPI"}
matplotlib = {version = "^3.7.2", source = "PyPI"}
haversine = {version = "^2.8.0", source = "PyPI"}
statsmodels = {version = "^0.14.0", source = "PyPI"}
seaborn = {version = "^0.12.2", source = "PyPI"}

[tool.poetry.dev-dependencies]
black-nb = "^0.7"
black = { extras = ["jupyter"], version = "*" }

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

