[project]
name = "cvar-optimizer"
version = "0.1.0"
description = "Cvar Optimizer"
readme = "README.md"
requires-python = ">=3.10, <3.12"

dependencies = [
    "atoti[aws,azure,gcp,jupyterlab,kafka,sql]==0.8.14",
    "jupyterlab <4.2",
    "pyportfolioopt >=1.5.5, <2",
    "pandas == 2.2.2",
    "yfinance >=0.2.41, <1",
    "ipywidgets >=8.0.6, <9"
]